[package]
name = "paprskomet"
version = "0.1.0"
authors = ["Martin <me@visgean.me>"]
edition = "2018"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]